--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="top-line">
       <!-- Nav-bar -->
-      <nav>
+      <nav class="nav-bar">
         <a href="./index.html" class="logo-cont"
           >Web<span class="logo">Studio</span></a
         >
@@ -37,7 +37,7 @@
       </nav>
       <!-- Contacts -->
       <address class="contacts">
-        <ul>
+        <ul class="contacts-list">
           <li class="contacts-link">
             <a class="contacts-link-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -59,29 +59,29 @@
       <!-- >Description -->
       <section class="Description">
         <h2 hidden>Description</h2>
-        <ul>
-          <li>
+        <ul class="dscr-container">
+          <li class="dscr-item">
             <h3 class="sec-name">Strategy</h3>
             <p class="sec-dscr">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="dscr-item">
             <h3 class="sec-name">Punctuality</h3>
             <p class="sec-dscr">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="dscr-item">
             <h3 class="sec-name">Diligence</h3>
             <p class="sec-dscr">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="dscr-item">
             <h3 class="sec-name">Technologies</h3>
             <p class="sec-dscr">
               Design practice focused on digital experiences. We bring forth a
@@ -93,7 +93,7 @@
       <!-- Our Team -->
       <section class="our-team">
         <h2 class="our-team-title">Our Team</h2>
-        <ul>
+        <ul class="card-container">
           <li class="team-card">
             <img
               src="./images/Mark.jpg"
@@ -131,70 +131,79 @@
       <!--Portfolio  -->
       <section class="Portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/Banking-App.jpg" alt="Banking App" width="360" />
-            <h3 class="port-list-title">Banking App</h3>
-            <p class="port-list-dscr">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/Cashless-Payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="port-list-title">Cashless Payment</h3>
-            <p class="port-list-dscr">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Meditation-App.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="port-list-title">Meditation App</h3>
-            <p class="port-list-dscr">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/Taxi-Service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="port-list-title">Taxi Service</h3>
-            <p class="port-list-dscr">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Screen-Illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="port-list-title">Screen Illustrations</h3>
-            <p class="port-list-dscr">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/Online-Courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="port-list-title">Online Courses</h3>
-            <p class="port-list-dscr">Marketing</p>
-          </li>
+        <ul class="port-list-container">
+          <div class="port-list-row">
+            <li class="port-list">
+              <img
+                src="./images/Banking-App.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="port-list-title">Banking App</h3>
+              <p class="port-list-dscr">App</p>
+            </li>
+            <li class="port-list">
+              <img
+                src="./images/Cashless-Payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="port-list-title">Cashless Payment</h3>
+              <p class="port-list-dscr">Marketing</p>
+            </li>
+            <li class="port-list">
+              <img
+                src="./images/Meditation-App.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="port-list-title">Meditation App</h3>
+              <p class="port-list-dscr">App</p>
+            </li>
+          </div>
+          <div class="port-list-row">
+            <li class="port-list">
+              <img
+                src="./images/Taxi-Service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="port-list-title">Taxi Service</h3>
+              <p class="port-list-dscr">Marketing</p>
+            </li>
+            <li class="port-list">
+              <img
+                src="./images/Screen-Illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="port-list-title">Screen Illustrations</h3>
+              <p class="port-list-dscr">Design</p>
+            </li>
+            <li class="port-list">
+              <img
+                src="./images/Online-Courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="port-list-title">Online Courses</h3>
+              <p class="port-list-dscr">Marketing</p>
+            </li>
+          </div>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-cont">
-      <a href="./index.html" class="logo-cont"
-        >Web<span class="footer-logo">Studio</span></a
-      >
-      >
-      <p class="footer-dscr">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer>
+      <div class="footer-cont">
+        <a href="./index.html" class="logo-cont-footer"
+          >Web<span class="footer-logo">Studio</span></a
+        >
+        <p class="footer-dscr">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
