--- a/index.html
+++ b/index.html
@@ -12,47 +12,46 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="top-line">
       <!-- Nav-bar -->
-      <div class="container">
-        <div class="header-container container">
-          <nav class="nav-bar">
-            <a href="./index.html" class="logo-cont"
-              >Web<span class="logo">Studio</span></a
-            >
-            <ul class="nav-list">
-              <li class="nav-list-item">
-                <a class="nav-list-link" href="./index.html">Studio</a>
-              </li>
-              <li class="nav-list-item">
-                <a href="" class="nav-list-link">Portfolio</a>
-              </li>
-              <li class="nav-list-item">
-                <a href="" class="nav-list-link">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <!-- Contacts -->
-          <address class="contacts">
-            <ul class="contacts-list">
-              <li class="contacts-link">
-                <a class="contacts-link-item" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contacts-link">
-                <a class="contacts-link-item" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+
+      <div class="header-container container">
+        <nav class="nav-bar">
+          <a href="./index.html" class="logo-cont"
+            >Web<span class="logo">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="" class="nav-list-link">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="" class="nav-list-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-link">
+              <a class="contacts-link-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-link">
+              <a class="contacts-link-item" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
