--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- >Description -->
       <section class="description">
         <div class="container">
-          <h2 hidden>Description</h2>
+          <h2 class="visually-hidden">Description</h2>
           <ul class="dscr-list">
             <li class="dscr-item">
               <h3 class="sec-name">Strategy</h3>
