--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <h2 class="visually-hidden">Description</h2>
           <ul class="dscr-list">
             <li class="dscr-item">
+              <div class="dscr-icon-cont">
+                <svg class="dscr-icon" width="64" height="64">
+                  <use href="./images/icon/image.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="sec-name">Strategy</h3>
               <p class="sec-dscr">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="dscr-item">
+              <div class="dscr-icon-cont">
+                <svg class="dscr-icon" width="64" height="64">
+                  <use href="./images/icon/image.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="sec-name">Punctuality</h3>
               <p class="sec-dscr">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="dscr-item">
+              <div class="dscr-icon-cont">
+                <svg class="dscr-icon" width="64" height="64">
+                  <use href="./images/icon/image.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="sec-name">Diligence</h3>
               <p class="sec-dscr">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="dscr-item">
+              <div class="dscr-icon-cont">
+                <svg class="dscr-icon" width="64" height="64">
+                  <use href="./images/icon/image.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="sec-name">Technologies</h3>
               <p class="sec-dscr">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +132,53 @@
               <div class="card-dscr">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-taem-dscr">Product Designer</p>
+                <ul class="social-link-list">
+                  <il class="social-link-item"
+                    ><a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-icon" width="16" height="16">
+                        <use
+                          href="/images/social-icons/image.svg#icon-instagram"
+                        ></use>
+                      </svg> </a
+                  ></il>
+                  <il class="social-link-item"
+                    ><a
+                      class="social-link"
+                      href="https://twitter.com/?lang=uk"
+                      target="_blank"
+                    >
+                      <svg class="social-link-icon" width="16" height="16">
+                        <use
+                          href="/images/social-icons/image.svg#icon-twitter"
+                        ></use></svg></a
+                  ></il>
+                  <il class="social-link-item"
+                    ><a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-icon" width="16" height="16">
+                        <use
+                          href="/images/social-icons/image.svg#icon-facebook"
+                        ></use></svg></a
+                  ></il>
+                  <il class="social-link-item"
+                    ><a
+                      class="social-link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-link-icon" width="16" height="16">
+                        <use
+                          href="/images/social-icons/image.svg#icon-linkedin"
+                        ></use></svg></a
+                  ></il>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -224,14 +291,66 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo-cont-footer"
-          >Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="footer-dscr">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="footer-dscr-cont">
+          <a href="./index.html" class="logo-cont-footer"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-dscr">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-sociale-cont">
+          <h3 class="footer-social-header">Social media</h3>
+          <ul class="footer-social-link-list">
+            <il class="footer-social-link-item"
+              ><a
+                class="footer-social-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use
+                    href="/images/social-icons/image.svg#icon-instagram"
+                  ></use>
+                </svg> </a
+            ></il>
+            <il class="footer-social-link-item"
+              ><a
+                class="footer-social-link"
+                href="https://twitter.com/?lang=uk"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use
+                    href="/images/social-icons/image.svg#icon-twitter"
+                  ></use></svg></a
+            ></il>
+            <il class="footer-social-link-item"
+              ><a
+                class="footer-social-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use
+                    href="/images/social-icons/image.svg#icon-facebook"
+                  ></use></svg></a
+            ></il>
+            <il class="footer-social-link-item"
+              ><a
+                class="footer-social-link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+              >
+                <svg class="footer-social-link-icon" width="24" height="24">
+                  <use
+                    href="/images/social-icons/image.svg#icon-linkedin"
+                  ></use></svg></a
+            ></il>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
