--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-taem-dscr">Product Designer</p>
                 <ul class="social-link-list">
-                  <il class="social-link-item"
-                    ><a
+                  <li class="social-link-item"></li>
+                    <a
                       class="social-link"
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -143,9 +143,10 @@
                         <use
                           href="/images/social-icons/image.svg#icon-instagram"
                         ></use>
-                      </svg> </a
-                  ></il>
-                  <il class="social-link-item"
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item"
                     ><a
                       class="social-link"
                       href="https://twitter.com/?lang=uk"
@@ -155,8 +156,8 @@
                         <use
                           href="/images/social-icons/image.svg#icon-twitter"
                         ></use></svg></a
-                  ></il>
-                  <il class="social-link-item"
+                  ></li>
+                  <li class="social-link-item"
                     ><a
                       class="social-link"
                       href="https://www.facebook.com/"
@@ -166,8 +167,8 @@
                         <use
                           href="/images/social-icons/image.svg#icon-facebook"
                         ></use></svg></a
-                  ></il>
-                  <il class="social-link-item"
+                  ></li>
+                  <li class="social-link-item"
                     ><a
                       class="social-link"
                       href="https://www.linkedin.com/"
@@ -177,7 +178,7 @@
                         <use
                           href="/images/social-icons/image.svg#icon-linkedin"
                         ></use></svg></a
-                  ></il>
+                  ></li>
                 </ul>
               </div>
             </li>
@@ -304,7 +305,7 @@
         <div class="footer-sociale-cont">
           <h3 class="footer-social-header">Social media</h3>
           <ul class="footer-social-link-list">
-            <il class="footer-social-link-item"
+            <li class="footer-social-link-item"
               ><a
                 class="footer-social-link"
                 href="https://www.instagram.com/"
@@ -315,8 +316,8 @@
                     href="/images/social-icons/image.svg#icon-instagram"
                   ></use>
                 </svg> </a
-            ></il>
-            <il class="footer-social-link-item"
+            ></li>
+            <li class="footer-social-link-item"
               ><a
                 class="footer-social-link"
                 href="https://twitter.com/?lang=uk"
@@ -326,8 +327,8 @@
                   <use
                     href="/images/social-icons/image.svg#icon-twitter"
                   ></use></svg></a
-            ></il>
-            <il class="footer-social-link-item"
+            ></li>
+            <li class="footer-social-link-item"
               ><a
                 class="footer-social-link"
                 href="https://www.facebook.com/"
@@ -337,8 +338,8 @@
                   <use
                     href="/images/social-icons/image.svg#icon-facebook"
                   ></use></svg></a
-            ></il>
-            <il class="footer-social-link-item"
+            ></li>
+            <li class="footer-social-link-item"
               ><a
                 class="footer-social-link"
                 href="https://www.linkedin.com/"
@@ -348,7 +349,7 @@
                   <use
                     href="/images/social-icons/image.svg#icon-linkedin"
                   ></use></svg></a
-            ></il>
+            ></li>
           </ul>
         </div>
       </div>
