--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-taem-dscr">Product Designer</p>
                 <ul class="social-link-list">
-                  <li class="social-link-item"></li>
+                  <li class="social-link-item">
                     <a
                       class="social-link"
                       href="https://www.instagram.com/"
@@ -146,8 +146,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item"
-                    ><a
+                  <li class="social-link-item"></li>
+                    <a
                       class="social-link"
                       href="https://twitter.com/?lang=uk"
                       target="_blank"
@@ -155,10 +155,11 @@
                       <svg class="social-link-icon" width="16" height="16">
                         <use
                           href="/images/social-icons/image.svg#icon-twitter"
-                        ></use></svg></a
-                  ></li>
-                  <li class="social-link-item"
-                    ><a
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a
                       class="social-link"
                       href="https://www.facebook.com/"
                       target="_blank"
@@ -166,10 +167,11 @@
                       <svg class="social-link-icon" width="16" height="16">
                         <use
                           href="/images/social-icons/image.svg#icon-facebook"
-                        ></use></svg></a
-                  ></li>
-                  <li class="social-link-item"
-                    ><a
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a
                       class="social-link"
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -177,8 +179,9 @@
                       <svg class="social-link-icon" width="16" height="16">
                         <use
                           href="/images/social-icons/image.svg#icon-linkedin"
-                        ></use></svg></a
-                  ></li>
+                        ></use></svg
+                    ></a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -305,7 +308,7 @@
         <div class="footer-sociale-cont">
           <h3 class="footer-social-header">Social media</h3>
           <ul class="footer-social-link-list">
-            <li class="footer-social-link-item"
+            <il class="footer-social-link-item"
               ><a
                 class="footer-social-link"
                 href="https://www.instagram.com/"
@@ -316,9 +319,9 @@
                     href="/images/social-icons/image.svg#icon-instagram"
                   ></use>
                 </svg> </a
-            ></li>
-            <li class="footer-social-link-item"
-              ><a
+            ></il>
+            <li class="footer-social-link-item">
+              <a
                 class="footer-social-link"
                 href="https://twitter.com/?lang=uk"
                 target="_blank"
@@ -326,10 +329,11 @@
                 <svg class="footer-social-link-icon" width="24" height="24">
                   <use
                     href="/images/social-icons/image.svg#icon-twitter"
-                  ></use></svg></a
-            ></li>
-            <li class="footer-social-link-item"
-              ><a
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-link-item">
+              <a
                 class="footer-social-link"
                 href="https://www.facebook.com/"
                 target="_blank"
@@ -337,10 +341,11 @@
                 <svg class="footer-social-link-icon" width="24" height="24">
                   <use
                     href="/images/social-icons/image.svg#icon-facebook"
-                  ></use></svg></a
-            ></li>
-            <li class="footer-social-link-item"
-              ><a
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-social-link-item">
+              <a
                 class="footer-social-link"
                 href="https://www.linkedin.com/"
                 target="_blank"
@@ -348,8 +353,9 @@
                 <svg class="footer-social-link-icon" width="24" height="24">
                   <use
                     href="/images/social-icons/image.svg#icon-linkedin"
-                  ></use></svg></a
-            ></li>
+                  ></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </div>
