--- a/index.html
+++ b/index.html
@@ -147,16 +147,14 @@
                     </a>
                   </li>
                   <li class="social-link-item"></li>
-                    <a
-                      class="social-link"
+                    <a class="social-link"
                       href="https://twitter.com/?lang=uk"
-                      target="_blank"
-                    >
+                      target="_blank">
                       <svg class="social-link-icon" width="16" height="16">
                         <use
                           href="/images/social-icons/image.svg#icon-twitter"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-link-item">
                     <a
@@ -167,8 +165,8 @@
                       <svg class="social-link-icon" width="16" height="16">
                         <use
                           href="/images/social-icons/image.svg#icon-facebook"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-link-item">
                     <a
@@ -179,8 +177,8 @@
                       <svg class="social-link-icon" width="16" height="16">
                         <use
                           href="/images/social-icons/image.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -318,8 +316,8 @@
                   <use
                     href="/images/social-icons/image.svg#icon-instagram"
                   ></use>
-                </svg> </a
-            ></il>
+                </svg> </a>
+            </il>
             <li class="footer-social-link-item">
               <a
                 class="footer-social-link"
@@ -329,8 +327,8 @@
                 <svg class="footer-social-link-icon" width="24" height="24">
                   <use
                     href="/images/social-icons/image.svg#icon-twitter"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+              </a>
             </li>
             <li class="footer-social-link-item">
               <a
@@ -341,8 +339,8 @@
                 <svg class="footer-social-link-icon" width="24" height="24">
                   <use
                     href="/images/social-icons/image.svg#icon-facebook"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+              </a>
             </li>
             <li class="footer-social-link-item">
               <a
@@ -353,8 +351,8 @@
                 <svg class="footer-social-link-icon" width="24" height="24">
                   <use
                     href="/images/social-icons/image.svg#icon-linkedin"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+              </a>
             </li>
           </ul>
         </div>
