--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/image.svg#icon-antenna"></use>
+                  <use href="./images/icon/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Strategy</h3>
@@ -85,7 +85,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/image.svg#icon-clock"></use>
+                  <use href="./images/icon/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/image.svg#icon-diagram"></use>
+                  <use href="./images/icon/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/image.svg#icon-astronaut"></use>
+                  <use href="./images/icon/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Technologies</h3>
@@ -148,7 +148,7 @@
                     >
                       <svg class="social-icon" width="16" height="16">
                         <use
-                          href="./images/icon/image.svg#icon-instagram"
+                          href="./images/icon/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -161,7 +161,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-twitter"></use>
+                        <use href="./images/icon/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -172,7 +172,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-facebook"></use>
+                        <use href="./images/icon/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -183,7 +183,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-linkedin"></use>
+                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -210,7 +210,7 @@
                     >
                       <svg class="social-icon" width="16" height="16">
                         <use
-                          href="./images/icon/image.svg#icon-instagram"
+                          href="./images/icon/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -223,7 +223,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-twitter"></use>
+                        <use href="./images/icon/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -234,7 +234,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-facebook"></use>
+                        <use href="./images/icon/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -245,7 +245,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-linkedin"></use>
+                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -272,7 +272,7 @@
                     >
                       <svg class="social-icon" width="16" height="16">
                         <use
-                          href="./images/icon/image.svg#icon-instagram"
+                          href="./images/icon/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -285,7 +285,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-twitter"></use>
+                        <use href="./images/icon/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -296,7 +296,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-facebook"></use>
+                        <use href="./images/icon/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -307,7 +307,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-linkedin"></use>
+                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -334,7 +334,7 @@
                     >
                       <svg class="social-icon" width="16" height="16">
                         <use
-                          href="./images/icon/image.svg#icon-instagram"
+                          href="./images/icon/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -347,7 +347,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-twitter"></use>
+                        <use href="./images/icon/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -358,7 +358,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-facebook"></use>
+                        <use href="./images/icon/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -369,7 +369,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/image.svg#icon-linkedin"></use>
+                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -519,7 +519,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/image.svg#icon-instagram"></use>
+                  <use href="./images/icon/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -531,7 +531,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/image.svg#icon-twitter"></use>
+                  <use href="./images/icon/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -542,7 +542,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/image.svg#icon-facebook"></use>
+                  <use href="./images/icon/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -553,7 +553,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/image.svg#icon-linkedin"></use>
+                  <use href="./images/icon/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
