--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Strategy</h3>
@@ -85,7 +85,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-item-header">Technologies</h3>
@@ -147,9 +147,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icon/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -161,7 +159,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -172,7 +170,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -183,7 +181,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -209,9 +207,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icon/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -223,7 +219,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -234,7 +230,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -245,7 +241,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -271,9 +267,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icon/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -285,7 +279,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -296,7 +290,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -307,7 +301,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -333,9 +327,7 @@
                       target="_blank"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icon/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -347,7 +339,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -358,7 +350,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -369,7 +361,7 @@
                       class="social-link"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icon/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -519,7 +511,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -531,7 +523,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -542,7 +534,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -553,7 +545,7 @@
                 class="footer-social-link"
               >
                 <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icon/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
