--- a/index.html
+++ b/index.html
@@ -551,7 +551,98 @@
             </li>
           </ul>
         </div>
+        <!-- footer-form -->
+        <div class="footer-form">
+          <p class="footer-fotm-cap">Subscribe</p>
+          <form class="form-subscribe" name="Subscribe">
+            <label class="subscribe-form-field">
+              <input
+                class="subscribe-form-input"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-form-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <!-- modal-window -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="modal close button">
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-X-close"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form" name="modal">
+          <div class="form-fild">
+            <label class="form-lable" for="user-name">Name</label>
+            <div class="form-item">
+              <input
+                class="form-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+            <label class="form-lable" for="user-phone">Phone</label>
+            <div class="form-item">
+              <input
+                class="form-input"
+                id="user-phone"
+                name="user-phone"
+                type="telphone"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+            <label class="form-lable" for="user-email">Email</label>
+            <div class="form-item">
+              <input
+                class="form-input"
+                id="user-email"
+                name="user-email"
+                type="email"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+            <label class="form-lable" for="user-comment">Comment</label>
+            <div class="form-item">
+              <textarea
+                class="form-user-comment"
+                name="user-comment"
+                id="user-comment"
+                cols="30"
+                rows="10"
+                placeholder="Text-input"
+              ></textarea>
+            </div>
+            <label class="form-lable" for="user-chekbox"
+              >I accept the terms and conditions of the Privacy Policy</label
+            >
+            <div class="form-item">
+              <input type="checkbox" />
+            </div>
+
+            <button class="modal-send-btn" type="submit">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
