--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
           <form class="form-subscribe" name="Subscribe">
             <label class="subscribe-form-field">
               <input
+                name="email"
                 class="subscribe-form-input"
                 type="email"
                 placeholder="E-mail"
@@ -593,10 +594,12 @@
                 name="user-name"
                 type="text"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
+          </div>
+          <div class="form-fild">
             <label class="form-lable" for="user-phone">Phone</label>
             <div class="form-item">
               <input
@@ -605,10 +608,12 @@
                 name="user-phone"
                 type="telphone"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
+          </div>
+          <div class="form-fild">
             <label class="form-lable" for="user-email">Email</label>
             <div class="form-item">
               <input
@@ -617,10 +622,12 @@
                 name="user-email"
                 type="email"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
+          </div>
+          <div class="form-fild">
             <label class="form-lable" for="user-comment">Comment</label>
             <div class="form-item">
               <textarea
@@ -632,15 +639,17 @@
                 placeholder="Text-input"
               ></textarea>
             </div>
+          </div>
+          <div class="form-fild">
             <label class="form-lable" for="user-chekbox"
               >I accept the terms and conditions of the Privacy Policy</label
             >
             <div class="form-item">
               <input type="checkbox" />
             </div>
-
-            <button class="modal-send-btn" type="submit">Send</button>
           </div>
+
+          <button class="modal-send-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
