--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 class="form-input"
                 id="user-phone"
                 name="user-phone"
-                type="telphone"
+                type="tel"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -627,7 +627,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-fild">
+          <div class="form-fild comment">
             <label class="form-lable" for="user-comment">Comment</label>
             <div class="form-item">
               <textarea
